--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <title>MyKik</title>
+
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">MyKik</a>
+        <a class="navbar-brand" href="#"><i class="fas fa-comments"></i> MyKik</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +31,7 @@
         <div id="login">
             <h3 class="display-4 text-center">Login</h3>      
             <div class="col-md-6 m-auto">
-                <div class="card mt-3">
+                <div class="card mt-3 shadow">
                     <div class="card-body mb-5">
                         <form class="form">
                             <div class="form-group">
@@ -47,6 +49,11 @@
             </div>
         </div>
     </div>
+    <footer class="footer bg-primary p-3" style="bottom: 0; position: absolute;">
+        <div class="container">
+            <p class="text-center" style="color: aliceblue;">Copyright &copy; 2020 by Harshan</p>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
