--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -43,9 +43,14 @@
                                 <input type="text" name="username" id="username" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" name="email" id="email" class="form-control">
+                                <label for="email">First Name</label>
+                                <input type="email" name="email" id="f_name" class="form-control">
                             </div>
+                            <div class="form-group">
+                                <label for="email">Last Name</label>
+                                <input type="email" name="email" id="l_name" class="form-control">
+                            </div>
+                           
                             <div class="form-group">
                                 <label for="password">Password</label>
                                 <input type="password" name="password" id="password" class="form-control">
