--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,22 +33,22 @@
             <div class="col-md-6 m-auto">
                 <div class="card mt-3 shadow">
                     <div class="card-body mb-5">
-                        <form class="form">
+                        <form class="form" method="POST" action="/signup">
                             <div class="form-group">
                                 <label for="email">Email</label>
                                 <input type="email" name="email" id="email" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label for="email">Username</label>
+                                <label for="username">Username</label>
                                 <input type="text" name="username" id="username" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label for="email">First Name</label>
-                                <input type="email" name="email" id="f_name" class="form-control">
+                                <label for="fname">First Name</label>
+                                <input type="text" name="fname" id="fname" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="email">Last Name</label>
-                                <input type="email" name="email" id="l_name" class="form-control">
+                                <input type="text" name="lname" id="lname" class="form-control">
                             </div>
                            
                             <div class="form-group">
@@ -59,7 +59,7 @@
                                 <label for="password2">Confirm Password</label>
                                 <input type="password" name="password2" id="password2" class="form-control">
                             </div>
-                            <button class="btn btn-primary">Register</button>
+                            <button class="btn btn-primary" type="submit">Register</button>
                         </form>
                     </div>
                 </div>
