--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,10 +33,20 @@
             <div class="col-md-6 m-auto">
                 <div class="card mt-3 shadow">
                     <div class="card-body mb-5">
-                        <form class="form">
+                        <% if(hasErrors){ %>
+                            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                                    <% _.forEach(messages, function(error){ %>
+                                        <%= error %><br>
+                                    <% }) %>
+                              </div>
+                              <% } %>
+                        <form class="form" action="/" method="POST">
                             <div class="form-group">
                                 <label for="email">Email</label>
-                                <input type="email" name="email" id="email" class="form-control">
+                                <input type="text" name="email" id="email" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
