--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,3 +7,11 @@ body{
   width: 100%;
   height: 60px;
 }
+.social-media{
+  text-decoration: none;
+  color:#444;
+}
+.social-media:hover{
+  text-decoration: none;
+  color:#222;
+}
