--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,6 +33,20 @@
             <div class="col-md-6 m-auto">
                 <div class="card mt-3 shadow">
                     <div class="card-body mb-5">
+                        <!-- social signup facebook start -->
+                        <a class="social-media" href="#">
+                            <h4 class="text-center">
+                                <i class="fab fa-facebook-square text-primary"></i> Signup with Facebook
+                            </h4>
+                        </a>
+                        <a class="social-media" href="#">
+                            <h4 class="text-center">
+                                <i class="fab fa-google-plus-square text-danger"></i> Signup with Google
+                            </h4>
+                        </a>
+                        <hr>
+                        <!-- social signup facebook end -->
+                        <!-- error messages start -->
                         <% if(hasErrors){ %>
                         <div class="alert alert-danger alert-dismissible fade show" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -43,6 +57,7 @@
                                 <% }) %>
                           </div>
                           <% } %>
+                          <!-- error messages end -->
                         <form class="form" method="POST" action="/signup">
                             <div class="form-group">
                                 <label for="email">Email</label>
