Added passort facebook logic and route

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,7 +34,7 @@
                 <div class="card mt-3 shadow">
                     <div class="card-body mb-5">
                         <!-- social signup facebook start -->
-                        <a class="social-media" href="#">
+                        <a class="social-media" href="/auth/facebook">
                             <h4 class="text-center">
                                 <i class="fab fa-facebook-square text-primary"></i> Signup with Facebook
                             </h4>
