Set admin dashboard page and router

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,18 @@
             <div class="col-md-6 m-auto">
                 <div class="card mt-3 shadow">
                     <div class="card-body mb-5">
+                         <!-- social signup facebook start -->
+                         <a class="social-media" href="/auth/facebook">
+                            <h4 class="text-center">
+                                <i class="fab fa-facebook-square text-primary"></i> Login with Facebook
+                            </h4>
+                        </a>
+                        <a class="social-media" href="#">
+                            <h4 class="text-center">
+                                <i class="fab fa-google-plus-square text-danger"></i> Login with Google
+                            </h4>
+                        </a>
+                        <hr>
                         <% if(hasErrors){ %>
                             <div class="alert alert-danger alert-dismissible fade show" role="alert">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
