--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,7 +39,7 @@
                                 <i class="fab fa-facebook-square text-primary"></i> Signup with Facebook
                             </h4>
                         </a>
-                        <a class="social-media" href="#">
+                        <a class="social-media" href="/auth/google">
                             <h4 class="text-center">
                                 <i class="fab fa-google-plus-square text-danger"></i> Signup with Google
                             </h4>
