--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -22,8 +22,7 @@
                         <input type="text" name="country" class="form-control" placeholder="Country Name">
                     </div>
                     <div class="form-group">
-                        <label for="">File</label>
-                        <input type="file" name="upload-input" class="form-control">
+                        <input type="file" name="upload-input" class="form-control d-none">
                     </div>
                     <button type="button">Upload File</button>
                 </form>
