--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -22,15 +22,18 @@
                         <input type="text" name="country" class="form-control" placeholder="Country Name">
                     </div>
                     <div class="form-group">
-                        <input type="file" name="upload-input" class="form-control d-none">
+                        <input type="file" accept=".jpg, .jpeg, .png" name="upload-input" id="upload-input" class="form-control d-none">
                     </div>
-                    <button type="button">Upload File</button>
+                    <button type="button" class="btn btn-info btn-upload">Upload File</button>
                 </form>
+                <hr>
+                <img src="https://previews.123rf.com/images/pavelstasevich/pavelstasevich1811/pavelstasevich181101028/112815904-no-image-available-icon-flat-vector-illustration.jpg" id="im-dis" alt="No Image" width="300px" height="300px" class="img-thumbnail">
             </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="/js/upload.js" ></script>
 </body>
 </html>
