--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -25,7 +25,7 @@
                         <input type="file" accept=".jpg, .jpeg, .png" name="upload-input" id="upload-input" class="form-control d-none">
                     </div>
                     <button type="button" class="btn btn-info btn-upload">Upload File</button>
-                    <button>Add Group</button>
+                    <button type="submit" class="btn btn-info">Add Group</button>
                 </form>
                 <hr>
                 <img src="https://previews.123rf.com/images/pavelstasevich/pavelstasevich1811/pavelstasevich181101028/112815904-no-image-available-icon-flat-vector-illustration.jpg" id="im-dis" alt="No Image" width="300px" height="300px" class="img-thumbnail">
