--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,92 @@
-<h1>Home Page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+    <title>MyKik</title>
+
+    <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#"><i class="fas fa-comments"></i> MyKik</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+            <ul class="navbar-nav ">
+                <li class="nav-item active">
+                    <a class="nav-link" href="./">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./signup">Register</a>
+                </li>
+            </ul>
+        </div>
+      </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+
+           
+            <div class="card mb-3 mt-2">
+                <div class="card-body">
+                    <form action="">
+                        <div class="input-group ">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <div class="input-group-append">
+                              <button class="btn btn-success" type="submit">Go</button>
+                            </div>
+                          </div>
+                    </form>
+                    
+                </div>
+            </div>
+        </div>
+        </div>
+       <div class="row">
+           <div class="col-md-3">
+               <div class="card">
+                <div class="card-header">Filter</div>
+                   <div class="card-body">
+                       <form action="">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <div class="input-group-append">
+                              <button class="btn btn-success" type="submit">Go</button>
+                            </div>
+                          </div>
+                       </form>
+                   </div>
+               </div>
+
+           </div>
+           <div class="col-md-9">
+               <!-- <div class="row"> -->
+                    <div class="col-md-4 mb-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="font-weight-bold">Name</p>
+                                <p class="font-weight-light">Country</p>
+                                <button class="float-right"><small>Add To Favourite</small></button>
+                            </div>
+                        </div>
+                    </div>
+
+               <!-- </div> -->
+            </div>
+       </div>
+    </div>
+    <footer class="footer bg-primary p-3" style="bottom: 0; position: absolute;">
+        <div class="container">
+            <p class="text-center" style="color: aliceblue;">Copyright &copy; 2020 by Harshan</p>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+</html>
