--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
-    <title>MyKik</title>
+    <title><%= title %></title>
 
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -73,27 +73,29 @@
 
            </div>
            <div class="col-md-9">
-               <!-- <div class="row"> -->
+               <div class="row">
+                <%  _.forEach(data, function(val){ %>
                     <div class="col-md-4 mb-2">
                         <div class="card">
                         <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar5.png" alt="Card image">
                             <div class="card-body">
-                                <p class="font-weight-bold mt-0 mb-0">Name</p>
-                                <p class="font-weight-light mt-0 ">Country</p>
+                                <p class="font-weight-bold mt-0 mb-0"><%= val.name %></p>
+                                <p class="font-weight-light mt-0 "><%= val.country %></p>
                                 <button class="float-right"><small>Add To Favourite</small></button>
                             </div>
                         </div>
                     </div>
-
-               <!-- </div> -->
+                    <% }) %>
+                   
+               </div>
             </div>
        </div>
     </div>
-    <footer class="footer bg-primary p-3" style="bottom: 0; position: absolute;">
+    <!-- <footer class="footer bg-primary p-3" style="bottom: 0; position: absolute;">
         <div class="container">
             <p class="text-center" style="color: aliceblue;">Copyright &copy; 2020 by Harshan</p>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
