modified upload to localstorage

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="card">
             <div class="card-body">
-                <form action="/dashboard" method="post" enctype="s">
+                <form action="/dashboard" method="post" >
                     <div class="form-group">
                         <label for="">Group Name</label>
                         <input type="text" name="group" class="form-control" placeholder="Group Name">
@@ -22,7 +22,7 @@
                         <input type="text" name="country" class="form-control" placeholder="Country Name">
                     </div>
                     <div class="form-group">
-                        <input type="file" accept=".jpg, .jpeg, .png" name="upload-input" id="upload-input" class="form-control d-none">
+                        <input type="file" accept=".jpg, .jpeg, .png" name="upload_input" id="upload-input" class="form-control d-none">
                     </div>
                     <button type="button" class="btn btn-info btn-upload">Upload File</button>
                     <button type="submit" class="btn btn-info">Add Group</button>
