added mongo aggregate method

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -77,7 +77,7 @@
                 <%  _.forEach(data, function(val){ %>
                     <div class="col-md-4 mb-2">
                         <div class="card">
-                        <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar5.png" alt="Card image">
+                        <img class="card-img-top" src="uploads/<%= val.image %>" alt="Card image">
                             <div class="card-body">
                                 <p class="font-weight-bold mt-0 mb-0"><%= val.name %></p>
                                 <p class="font-weight-light mt-0 "><%= val.country %></p>
