--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,9 +60,9 @@
                             <!-- <div class="input-group-append"> -->
                               <select class="form-control">
                                 <option selected>Choose...</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <%  _.forEach(countries, function(val){ %>
+                                <option value="1"><%= val._id %></option>
+                                <% }) %>
                               </select>
                             <!-- </div> -->
                           </div>
