Import UI design for group chat

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,7 +81,7 @@
                             <div class="card-body">
                                 <p class="font-weight-bold mt-0 mb-0"><%= val.name %></p>
                                 <p class="font-weight-light mt-0 "><%= val.country %></p>
-                                <button class="float-right"><small>Add To Favourite</small></button>
+                                <a class="btn btn-info float-right" href="/group/<%= val.name %>"><small>Add To Favourite</small></a>
                             </div>
                         </div>
                     </div>
