--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -1,1 +1,118 @@
-Group!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+    <title><%= title %></title>
+
+    <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#"><i class="fas fa-comments"></i> MyKik</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+            <ul class="navbar-nav ">
+                <li class="nav-item active">
+                    <a class="nav-link" href="./members">Members</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown 
+                      
+                    </a>
+                   
+                </li>
+            </ul>
+        </div>
+      </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card mb-3 mt-2">
+                    <div class="card-body">
+                        <form action="">
+                            <div class="input-group ">
+                                <input type="text" class="form-control">
+                                <div class="input-group-append">
+                                <button class="btn btn-primary" type="submit">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                        
+                    </div>
+                </div>
+        </div>
+        </div>
+       <div class="row">
+           
+           <div class="col-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <img src="https://static.thenounproject.com/png/17241-200.png" class="rounded-circle" alt="" srcset="">
+                    <h5 class="text-center">Username || Fullname</h5>
+                    <p class="text-center"><i class="fas fa-circle fa-xs" style="color: green;"></i> Online</p>
+                    <p class="text-center"><i class="fas fa-compass"></i> Colombo</p>
+                </div>
+
+                <div class="card-footer">
+                    <p class="text-center"><a href="">View Profile <i class="fas fa-arrow-right fa-xs mb-0"></i></a></p>
+                </div>
+
+            </div>
+            <div class="card mt-2 mb-2">
+                <div class="card-header">
+                    <h5>Online Friends</h5>
+                </div>
+                <div class="card-body">
+                    Content
+                 </div>
+           </div>
+           </div>
+           <div class="col-md-6">
+               <div class="card">
+                   <div class="card-header">
+                       <h5>Group Name</h5>
+                   </div>
+                   <div class="card-body">
+                       Content
+                    </div>
+                   <div class="card-footer">
+                       <form action="">
+                           <div class="input-group">
+                               <input type="text" class="form-control">
+                               <div class="input-group-append">
+                                <button class="btn btn-info" type="submit">Send</button>
+                              </div>
+                           </div>
+                       </form>
+                   </div>
+               </div>
+
+           </div>
+           <div class="col-md-3">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Online Club Fans</h5>
+                </div>
+                <div class="card-body">
+                    Content
+                 </div>
+            </div>
+       </div>
+    </div>
+    <!-- <footer class="footer bg-primary p-3" style="bottom: 0; position: absolute;">
+        <div class="container">
+            <p class="text-center" style="color: aliceblue;">Copyright &copy; 2020 by Harshan</p>
+        </div>
+    </footer> -->
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+</html>
