--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -11,26 +11,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#"><i class="fas fa-comments"></i> MyKik</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav ">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./members">Members</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown 
-                      
-                    </a>
-                   
-                </li>
-            </ul>
-        </div>
-      </nav>
+    <%- include('../partials/navbar.ejs') %>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -98,7 +79,7 @@
            <div class="col-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h5>Online Club Fans</h5>
+                    <h5><i class="fas fa-users"></i> Online Club Fans</h5>
                 </div>
                 <div class="card-body">
                     Content
