Emit the message to server

--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -64,11 +64,11 @@
                        Content
                     </div>
                    <div class="card-footer">
-                       <form action="">
+                       <form id="message-form"  method="POST">
                            <div class="input-group">
-                               <input type="text" class="form-control">
+                               <input type="text" id="msg" class="form-control">
                                <div class="input-group-append">
-                                <button class="btn btn-info" type="submit">Send</button>
+                                <button class="btn btn-info" id="send-message" type="submit">Send</button>
                               </div>
                            </div>
                        </form>
