create channel for group chat rooms

--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -66,6 +66,7 @@
                    <div class="card-footer">
                        <form id="message-form"  method="POST">
                            <div class="input-group">
+                               <input type="hidden" id="groupName" name="groupName" value="<%= groupName %>">
                                <input type="text" id="msg" class="form-control">
                                <div class="input-group-append">
                                 <button class="btn btn-info" id="send-message" type="submit">Send</button>
