--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -110,7 +110,7 @@
                     <h5><i class="fas fa-users"></i> Online Club Fans</h5>
                 </div>
                 <div class="card-body">
-                    Content
+                    <div id="users"></div>
                  </div>
             </div>
        </div>
