Set modal to modal request

--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -107,7 +107,7 @@
            <div class="col-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h5><i class="fas fa-users"></i> Online Club Fans</h5>
+                    <h5><i class="fas fa-users"></i> Online Club Fans<span id="numUsers"></span></h5>
                 </div>
                 <div class="card-body">
                     <div id="users"></div>
@@ -115,6 +115,30 @@
             </div>
        </div>
     </div>
+
+
+
+    <!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Add Friend</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- modal end -->
     <!-- <footer class="footer bg-primary p-3" style="bottom: 0; position: absolute;">
         <div class="container">
             <p class="text-center" style="color: aliceblue;">Copyright &copy; 2020 by Harshan</p>
