--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,9 +8,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="./members">Members</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown 
+                    <%= user.username %>
                   
                 </a>
                
