--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -148,5 +148,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/group/groupchat.js"></script>
+    <script src="/js/group/send_request.js"></script>
 </body>
 </html>
