--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -126,12 +126,15 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <form action="" method="post" class="mx-auto" id="add-friend">
+        <div class="modal-body" >
+          <form action="" method="post"  id="add-friend">
               <input type="hidden" name="receiverName" id="receiverName" value="">
               <input type="hidden" name="senderName" id="senderName" id="sender-name" value="<%= user.username %>">
-              <button type="submit" id="friend-add" class="btn btn-primary"> Add Friend</button>
-              <a class="btn btn-secondary" id="nameLink" style="color: ivory;">View Profile</a>
+              <center>
+                <button type="submit" id="friend-add" class="btn btn-primary"><i class="fas fa-user-plus"></i> Add Friend</button>
+                <a class="btn btn-secondary" id="nameLink" style="color: ivory;"><i class="fas fa-eye"></i> View Profile</a>
+              </center>
+              
           </form>
         </div>
         <div class="modal-footer">
