Set emit and listen friend request event

--- a/views/group_chat/group.ejs
+++ b/views/group_chat/group.ejs
@@ -127,7 +127,7 @@
           </button>
         </div>
         <div class="modal-body" >
-          <form action="" method="post"  id="add-friend">
+          <form action="" method="post"  id="add_friend">
               <input type="hidden" name="receiverName" id="receiverName" value="">
               <input type="hidden" name="senderName" id="senderName" id="sender-name" value="<%= user.username %>">
               <center>
